add basic session auth and middleware on server
