# apps/server/src/routes/account.routes.ts
@@ -1,21 +1,14 @@
 /* eslint-disable @typescript-eslint/no-misused-promises */
 import { Router } from 'express';
-import { validate } from '../middleware/validate';
-import { AccountCreateRequest } from '@shared/schemas/';
 import accountsController from '../controllers/accounts.controller';
+import { auth } from '../middleware/auth';
 
 const accountsRouter = Router();
 
-accountsRouter.post(
-  '/',
-  validate(AccountCreateRequest),
-  accountsController.create
-);
+accountsRouter.get('/:id', auth.optional, accountsController.getById);
 
-accountsRouter.get('/:id', accountsController.getById);
+accountsRouter.get('/', auth.optional, accountsController.getAll);
 
-accountsRouter.get('/', accountsController.getAll);
-
-accountsRouter.delete('/:id', accountsController.remove);
+accountsRouter.delete('/:id', auth.optional, accountsController.remove);
 
 export default accountsRouter;
